--- a/ejs-neu/views/pages/wflow.ejs
+++ b/ejs-neu/views/pages/wflow.ejs
@@ -4,14 +4,60 @@
 	<link rel="styleSheet" type="text/css" href="static/css/style.css" />
     <% include ../partials/head %>
 	<script type="text/javascript">
-		function onCreateWflow(){
-		$("#createWorkflow").modal("show");
-		}
-	
-		function showData(){
-			var value = $("#createWorkflow input#gadgetname").val();
-			alert(value);
-			$("#createWorkflow").modal("hide");
+			function savePassword(){
+				var password_old = $(" input#password").val();
+				var password_new = $(" input#newPW").val();
+				var password_re = $(" input#rePW").val();
+				
+				if( password_new === password_re){
+					$.ajax({
+						url: "http://localhost:8088/api/v1/users/",
+						method: "PUT",
+						data: {
+							password_old,
+							password_new
+						},
+						success:function(){
+							$('#passwordModal').modal('show');
+						},
+						error: function(){
+							$('#passwordModalfail').modal('show');
+						}
+					});
+				}
+				else{
+					$('#passwordModalfail').modal('show');
+				}
+				
+				
+			}
+			function onLogout(){
+			$.ajax({
+				url: "http://localhost:8088/api/v1/users/logout",
+				method: "post",
+				data: {},
+				success: function(data){
+					console.log(data);
+					window.location="http://localhost:8088/";
+				},
+				error: function(data){
+					console.log(data);
+				}
+			});
+			}
+		
+		function deleteAcc(){
+			$.ajax({
+				url: "http://localhost:8088/api/v1/users/",
+				method: "DELETE",
+				data: {},
+				success: function(){
+					alert("user gelöscht");
+				},
+				error: function(){
+					window.alert("user konnte nicht gelöscht werden");
+				}
+			});
 		}
 		
 	</script>
@@ -20,105 +66,53 @@
 
 <header>
 				<% include ../partials/header %>
+				
+				
 			</header>
 <div class="container">
 	<div class="row">
-		<div class="col-sm-1"></div>
-		<div class="col-sm-10">
-			
+		<div class="col-sm-3"></div>
+		<div class="col-sm-6">
+			<div class="panel panel-primary">
+			  <div class="panel-heading">
+				<h3 class="panel-title">Passwort ändern</h3>
+			  </div>
+			  <div class="panel-body">
+				<form role="form">
+					<div class="form-group">
+								  
+								  <input type="password" class="form-control" id="password" placeholder="Aktuelles Passwort">
+								</div>
+								<div class="form-group">
+									
+									<input type="password" class="form-control" id="newPW" placeholder="Neues Passwort">
+								</div>
+								<div class="form-group">
+									
+									<input type="password" class="form-control" id="rePW" placeholder="Neues Passwort wiederholen">
+								</div>								
+						</form>
+						<button type="button" class="btn btn-success btn-default pull-center" onclick="savePassword()"><span class="glyphicon glyphicon-save"></span> Speichern</button>
+				
+				
+			  </div>
+			  </div>
+			  
+			  
+			<div class="panel panel-primary">
+			<div class="panel-heading">
+				<h3 class="panel-title">Account löschen</h3>
+			  </div>
+			  <div class="panel-body">
+				<button type="button" class="btn btn-success btn-danger btn-block" onclick="deleteAcc()">Account dauerhaft löschen</button>
+			  </div>
+			</div>
 
-    
-			<main>
-				<div class="col-sm-4">
-					<div class="panel panel-primary">
-					<div class="panel-heading">
-						<h3 class="panel-title">Gerätename</h3>
-						</div>
-						<div class="panel-body">
-							<p>IP-Adresse: 191.188.100.255</p>
-							<P>Port: 8000</p>
-							<button class="btn btn-danger pull-right"><span class="glyphicon glyphicon-remove"></span></button>
-							<button class="btn btn-success pull-right"><span class="glyphicon glyphicon-ok"></span></button>						
-						</div>
-						
-						 
-						</div>
-					<div class="jumbotron">
-						<h1>This is great</h1>
-						<p>Welcome to templating using EJS</p>
-					</div>
-					<div class="jumbotron">
-						<h1>This is great</h1>
-						<p>Welcome to templating using EJS</p>
-					</div> 
-				</div>
-				<div class="col-sm-4">
-					<div class="jumbotron">
-						<h1>This is great</h1>
-						<p>Welcome to templating using EJS</p>
-					</div>
-					<div class="jumbotron">
-						<h1>This is great</h1>
-						<p>Welcome to templating using EJS</p>
-					</div>
-					<div class="panel panel-primary">
-					<div class="panel-heading">
-						<h3 class="panel-title">Gerätename</h3>
-						</div>
-						<div class="panel-body">
-							<p>IP-Adresse: 191.188.100.255</p>
-							<P>Port: 8000</p>
-							<button class="btn btn-danger pull-right"><span class="glyphicon glyphicon-remove"></span></button>
-							<button class="btn btn-success pull-right"><span class="glyphicon glyphicon-ok"></span></button>						
-						</div>
-						
-						 
-						</div>
-				</div>
-				<div class="col-sm-4">
-					<div class="jumbotron">
-						<h1>This is great</h1>
-						<p>Welcome to templating using EJS</p>
-					</div>
-					<div class="panel panel-primary">
-					<div class="panel-heading">
-						<h3 class="panel-title">Gerätename</h3>
-						</div>
-						<div class="panel-body">
-							<p>IP-Adresse: 191.188.100.255</p>
-							<P>Port: 8000</p>
-							<button class="btn btn-danger pull-right"><span class="glyphicon glyphicon-remove"></span></button>
-							<button class="btn btn-success pull-right"><span class="glyphicon glyphicon-ok"></span></button>						
-						</div>
-						
-						 
-						</div><div class="panel panel-primary">
-					<div class="panel-heading">
-						<h3 class="panel-title">Gerätename</h3>
-						</div>
-						<div class="panel-body">
-							<p>IP-Adresse: 191.188.100.255</p>
-							<P>Port: 8000</p>
-							<button class="btn btn-danger pull-right"><span class="glyphicon glyphicon-remove"></span></button>
-							<button class="btn btn-success pull-right"><span class="glyphicon glyphicon-ok"></span></button>						
-						</div>
-						
-						 
-						</div>
-					
-				</div>		
-			
-		
-			</main>
-			
-			<button type="button" class="fixedbutton btn btn-primary" onclick="onCreateWflow()">
-					<span class="glyphicon glyphicon-plus" ></span>
-				</button>
-				<% include ../partials/createWF %>
-
+		<% include ../partials/password %>
+		<% include ../partials/pwfail %>
 			
 		</div>
-		<div class="col-sm-1"></div>
+		<div class="col-sm-3"></div>
 		
 	</div>
 </div>
