--- a/ejs-neu/views/partials/header.ejs
+++ b/ejs-neu/views/partials/header.ejs
@@ -27,7 +27,7 @@
         <li><a href="/devices">Geräte</a>
 
         </li>
-        <li><a href="/wflow">Workflow</a></li>
+        <li><a href="/wflow">Einstellungen</a></li>
 		</ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a><button class="glyphicon glyphicon-log-out btn btn-xs btn-danger" onclick="onLogout()">Logout</button></a></li>
