--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,2 +1,7 @@
-
-<p class="text-center text-muted"><span class="glyphicon glyphicon-copyright-mark"></span> Copyright 2016 Simon Oswald, Dominic Steinhauser</p>
+<!--
+	Copyright shown in footer
+-->
+<p class="text-center text-muted">
+	<span class="glyphicon glyphicon-copyright-mark"></span>
+	Copyright 2016 Simon Oswald, Dominic Steinhauser
+</p>
