--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,3 +1,7 @@
+<!-
+	Load all external resources to the webpage.
+-->
+
   <title class="glyphicon glyphicon-log-out" >IoT Manager</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
