--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,17 +1,15 @@
+<!--
+	The header section. 
+-->
 <link rel="stylesheet" type="text/css" href="static/css/style.css" />
-<script type="text/javascript">
-
-</script>
-
 <!-- Images above the menu bar. Disappears by scrolling -->
 <div class="container-fluid test2" >
 	  <h1>IoT Manager</h1>
 	  <h3>... schaltet alles ein und/ oder aus!</h3>
-
 </div>
 
 
-<!--Navigationsbar-->
+<!--Navigationbar-->
 <nav class="navbar navbar-inverse " data-spy="affix" data-offset-top="197" id="nav">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -24,9 +22,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li><a href="/devices">Geräte</a>
-
-        </li>
+        <li><a href="/devices">Geräte</a></li>
         <li><a href="/settings">Einstellungen</a></li>
 		</ul>
       <ul class="nav navbar-nav navbar-right">
