--- a/views/partials/request.ejs
+++ b/views/partials/request.ejs
@@ -1,29 +1,16 @@
-<!-- modal login -->
-			<div class="modal fade scrollen" id="runRequest" role="dialog">
-				<div class="modal-dialog">
-					<!-- Modal content-->
-					<div class="modal-content">
-						
-						<div class="modal-header" ;">
-							<h4> Request</h4>
-						</div>
-						
-						<div class="modal-body" >
-							<p>Request wurde erfolgreich an das das Gerät gesendet.<p>
-						</div>
-						
-					</div>
-				</div>
+<!-- 
+	Modal which is shown if an action has sent a request successfully
+ -->
+<div class="modal fade scrollen" id="runRequest" role="dialog">
+	<div class="modal-dialog">
+		<!-- Modal content-->
+		<div class="modal-content">
+			<div class="modal-header" ;">
+				<h4> Request</h4>
 			</div>
-
+			<div class="modal-body" >
+				<p>Request wurde erfolgreich an das das Gerät gesendet.<p>
+			</div>
 		</div>
-		<div class="col-sm-4"></div>
-	</div>	
+	</div>
 </div>
-
-
-
-
-
-
-
