--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -1,61 +1,62 @@
+<!-- 
+	Register page to create an user.
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<link rel="styleSheet" type="text/css" href="static/css/style.css" />
-    <% include ../partials/head %>
-	<script type="text/javascript">
-	
+<% include ../partials/head %>
+<script type="text/javascript">
+
+		//do not show navbar items on register page. User is not authenticated.
 		$(document).ready(function(){  
 			document.getElementById('myNavbar').style.visibility='hidden';
 			document.getElementById('navBrand').style.visibility='hidden';
 			document.getElementById('menubutton').style.display='none';
-			$("#loginModal").modal({backdrop: 'static', keyboard: false});    
 		});
 
-		
+		//handle register user.
 		function onRegister(){
-			var data = $('#registerForm').serializeArray();
-			  
-			
+			var data = $('#registerForm').serializeArray();			
 			var username = data[0].value;
 			var password = data[1].value;
 			var password2 = data[2].value;
 			
-			if(password === password2 ){
-			
-			$('#username').parent('div').removeClass('has-error');
-			$.ajax({
-					url: "http://localhost:8088/api/v1/users",
-					method: "POST",
-					data: {
-						username,
-						password
-					},
-					success: function(data){
-						console.log(data);
-						window.location="http://localhost:8088/devices";
-					},
-					error: function(data){
-						console.log(data);
-						$('#username').parent('div').addClass('has-error');
+			//check if passwords are identical. If yes send request to the server.
+			if(password === password2 ){			
+				$('#username').parent('div').removeClass('has-error');
+				$.ajax({
+						url: "http://localhost:8088/api/v1/users",
+						method: "POST",
+						data: {
+							username,
+							password
+						},
+						success: function(data){
+							console.log(data);
+							window.location="http://localhost:8088/devices";
+						},
+						error: function(data){
+							console.log(data);
+							$('#username').parent('div').addClass('has-error');
+							
+							
+						}
 						
-						
-					}
-					
-				});
+					});
 				}
 				else{
+				//if passwords not identical mark the input field 
 					$('#password').parent('div').addClass('has-error');
 					$('#password2').parent('div').addClass('has-error');
-				}
-				
-		}
-		function onBackLogin(){
-				window.location="http://localhost:8088/login";
-				
+				}			
 		}
 		
-	
+		// switch back to login page
+		function onBackLogin(){
+				window.location="http://localhost:8088/login";
+		}
+
 </script>
 </head>
 <body >
@@ -67,12 +68,15 @@
 		<div class="row">
 			<div class="col-sm-2"></div>
 			<div class="col-sm-8">
+			<!-- Register Panel -->
+			
 				<div class="panel panel-primary">
 					<div class="panel-heading">
 						<h3 class="panel-title">Register</h3>
 					  </div>
 					  <div class="panel-body">
 						<form role="form" id="registerForm">
+			<!-- Form with input fields-->			
 							<div class="form-group">
 							  <label for="usrname" id="user"><span class="glyphicon glyphicon-user"></span> Benutzername</label>
 							  <input type="text" class="form-control" name="username" id="username" placeholder="Benutzername">
@@ -85,7 +89,7 @@
 								<input type="password" class="form-control" name="repassword" id="password2" placeholder="Passwort">
 							</div>
 
-							<!-- Login Cancel Button -->
+			<!-- Register Button -->
 							<button type="Button" class="btn btn-success btn-md center-block " onclick="onRegister()"><span class="glyphicon glyphicon-pencil"></span> Registrieren</button>
 						</form>
 					  </div>
@@ -93,6 +97,7 @@
 						<div class="row">
 							<div class="col-sm-4"></div>
 							<div class="col-sm-4">
+			<!-- Back to login -->				
 								<button type="submit" class="btn btn-default btn-block" data-dismiss="modal" id="register" onclick="onBackLogin()"><span class="glyphicon glyphicon-log-in"></span> Zum Login</button>
 							</div>
 							<div class="col-sm-4"></div>
@@ -101,11 +106,6 @@
 				</div>
 			<div class="col-sm-2"></div>
 		</div>
-	</div>
-	
-	
-		
-		
-    
+	</div>    
 </body>
 </html>	
