--- a/views/partials/password.ejs
+++ b/views/partials/password.ejs
@@ -1,29 +1,20 @@
-<!-- modal login -->
-			<div class="modal fade scrollen" id="passwordModal" role="dialog">
-				<div class="modal-dialog">
-					<!-- Modal content-->
-					<div class="modal-content">
-						
-						<div class="modal-header" ;">
-							<h4> Passwort ändern</h4>
-						</div>
-						
-						<div class="modal-body" >
-							<p>Passwort wurde erfolgreich geändert.<p>
-						</div>
-						
-					</div>
-				</div>
+<!-- 
+	Modal which is shown if the password has been changed correctly.
+ -->
+<div class="modal fade scrollen" id="passwordModal" role="dialog">
+	<div class="modal-dialog">
+	<!-- Modal content-->
+		<div class="modal-content">
+			<div class="modal-header" ;">
+				<h4> Passwort ändern</h4>
 			</div>
+			<div class="modal-body" >
+				<p>Passwort wurde erfolgreich geändert.<p>
+			</div>
+		</div>
+	</div>		</div>
 
 		</div>
 		<div class="col-sm-4"></div>
 	</div>	
 </div>
-
-
-
-
-
-
-
