--- a/views/partials/pwfail.ejs
+++ b/views/partials/pwfail.ejs
@@ -1,30 +1,17 @@
-<!-- modal login -->
-			<div class="modal fade scrollen" id="passwordModalfail" role="dialog">
-				<div class="modal-dialog">
-					<!-- Modal content-->
-					<div class="modal-content">
-						
-						<div class="modal-header" ;">
-							<h4> Passwort ändern</h4>
-						</div>
-						
-						<div class="modal-body" >
-							<p>Passwort konnte nicht geändert werden.<p>
-							<p>Bitte Eingaben überprüfen...<p>
-						</div>
-						
-					</div>
-				</div>
+<!-- 
+	Modal which is shown when the password change has not been successfully
+-->
+<div class="modal fade scrollen" id="passwordModalfail" role="dialog">
+	<div class="modal-dialog">
+	<!-- Modal content-->
+		<div class="modal-content">
+			<div class="modal-header" ;">
+				<h4> Passwort ändern</h4>
 			</div>
-
+			<div class="modal-body" >
+				<p>Passwort konnte nicht geändert werden.<p>
+				<p>Bitte Eingaben überprüfen...<p>
+			</div>
 		</div>
-		<div class="col-sm-4"></div>
-	</div>	
+	</div>
 </div>
-
-
-
-
-
-
-
