--- a/views/partials/requestFail.ejs
+++ b/views/partials/requestFail.ejs
@@ -1,26 +1,22 @@
-<!-- modal login -->
-			<div class="modal fade scrollen" id="requestFail" role="dialog">
-				<div class="modal-dialog">
-					<!-- Modal content-->
-					<div class="modal-content">
-						
-						<div class="modal-header" ;">
-							<h4> Request</h4>
-						</div>
-						
-						<div class="modal-body" >
-							<p>Request wurde leider nicht erfolgreich ausgeführt...<p>
-							
-						</div>
-						
-					</div>
-				</div>
+<!-- 	Request failed Modal
+		It is used if an action can not be send.
+ -->
+<div class="modal fade scrollen" id="requestFail" role="dialog">
+	<div class="modal-dialog">
+	<!-- Modal content-->
+		<div class="modal-content">
+			<div class="modal-header" ;">
+				<h4> Request</h4>
 			</div>
-
+			<div class="modal-body" >
+				<p>Request wurde leider nicht erfolgreich ausgeführt...<p>
+			</div>
 		</div>
-		<div class="col-sm-4"></div>
-	</div>	
+			
+	</div>
 </div>
+
+
 
 
 
