--- a/views/partials/request.ejs
+++ b/views/partials/request.ejs
@@ -1,15 +1,15 @@
 <!-- 
 	Modal which is shown if an action has sent a request successfully
  -->
-<div class="modal fade scrollen" id="runRequest" role="dialog">
+<div class="modal fade scrollen" id="requestrun" role="dialog">
 	<div class="modal-dialog">
-		<!-- Modal content-->
+	<!-- Modal content-->
 		<div class="modal-content">
 			<div class="modal-header" ;">
 				<h4> Request</h4>
 			</div>
 			<div class="modal-body" >
-				<p>Request wurde erfolgreich an das das Gerät gesendet.<p>
+				<p>Request erfolgreich ausgeführt.<p>
 			</div>
 		</div>
 	</div>
