--- a/views/partials/requestFail.ejs
+++ b/views/partials/requestFail.ejs
@@ -1,7 +1,7 @@
 <!-- 	Request failed Modal
 		It is used if an action can not be send.
  -->
-<div class="modal fade scrollen" id="requestFail" role="dialog">
+<div class="modal fade scrollen" id="requestfail" role="dialog">
 	<div class="modal-dialog">
 	<!-- Modal content-->
 		<div class="modal-content">
@@ -9,9 +9,8 @@
 				<h4> Request</h4>
 			</div>
 			<div class="modal-body" >
-				<p>Request wurde leider nicht erfolgreich ausgeführt...<p>
+				<p>Request konnte nicht erfolgreich ausgeführt werden.<p>
 			</div>
 		</div>
-			
 	</div>
 </div>
